ajuste tela leaderboard

--- a/tti2sdk/src/main/res/layout/item_alltime_board.xml
+++ b/tti2sdk/src/main/res/layout/item_alltime_board.xml
@@ -29,7 +29,6 @@
         android:layout_marginStart="12dp"
         android:background="@drawable/circular_border"
         android:gravity="center"
-        android:text="5"
         android:textColor="@color/black"
         android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -45,7 +44,6 @@
         android:layout_marginBottom="4dp"
         android:ellipsize="end"
         android:maxLines="1"
-        android:text="Abyasa Sinurat"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/guideCenterHor"
@@ -59,7 +57,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginTop="4dp"
-        android:text="1234567890"
         android:textColor="@color/black"
         android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@id/counter"
@@ -73,22 +70,21 @@
         android:layout_marginBottom="4dp"
         android:ellipsize="end"
         android:maxLines="1"
-        android:text="1.413"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@id/guideCenterHor"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@id/guideEndVer"
-        tools:text="1.413"/>
+        tools:text="1.413" />
 
     <TextView
         android:id="@+id/txtKmLeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
         android:layout_marginTop="4dp"
-        android:text="KM"
         android:textColor="@color/black"
         android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@id/guideEndVer"
         app:layout_constraintTop_toBottomOf="@id/guideCenterHor"
         tools:text="KM" />
