--- a/tti2sdk/src/main/res/layout/fragment_alltime.xml
+++ b/tti2sdk/src/main/res/layout/fragment_alltime.xml
@@ -1,74 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/all_white"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:background="@color/all_white">
 
     <TextView
+        android:id="@+id/labelStatus"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/labelStatus"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
+        android:text="@string/label_your_place"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:text="@string/label_your_place"
-        tools:text="Your Place"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Your Place"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/containerLeaderPlace"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:background="@drawable/background_card_board"
         android:layout_margin="14dp"
-        android:id="@+id/containerLeaderPlace"
-        app:layout_constraintStart_toStartOf="parent"
+        android:background="@drawable/background_card_board"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/labelStatus">
 
         <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideCenterHor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/guideCenterHor"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.5"/>
 
         <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideEndVer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/guideEndVer"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.8"/>
 
         <ImageView
+            android:id="@+id/imgPhotoBoard"
             android:layout_width="46dp"
             android:layout_height="46dp"
-            android:id="@+id/imgPhotoBoard"
             android:layout_marginStart="8dp"
             android:src="@drawable/ic_diamont"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent"/>
 
         <TextView
+            android:id="@+id/txtPosition"
             android:layout_width="42dp"
             android:layout_height="42dp"
-            android:id="@+id/counter"
-            tools:text="5"
-            android:text="5"
-            android:gravity="center"
+            android:layout_marginStart="12dp"
             android:background="@drawable/circular_border"
+            android:gravity="center"
+            android:text="5"
             android:textColor="@color/black"
             android:textSize="22sp"
-            android:layout_marginStart="12dp"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@id/imgPhotoBoard"/>
+            app:layout_constraintStart_toEndOf="@id/imgPhotoBoard"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="5"/>
 
         <TextView
             android:id="@+id/txtNameLeader"
@@ -76,14 +76,13 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:layout_marginBottom="4dp"
-            android:textColor="@color/black"
-            android:maxLines="1"
             android:ellipsize="end"
-            android:text="Abyasa Sinurat"
+            android:maxLines="1"
+            android:textColor="@color/black"
             android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@+id/guideCenterHor"
             app:layout_constraintEnd_toStartOf="@+id/guideEndVer"
-            app:layout_constraintStart_toEndOf="@id/counter"
+            app:layout_constraintStart_toEndOf="@id/txtPosition"
             tools:text="Abyasa Sinurat" />
 
         <TextView
@@ -91,63 +90,61 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
-            android:text="1234567890"
+            android:layout_marginTop="4dp"
             android:textColor="@color/black"
             android:textSize="14sp"
-            android:layout_marginTop="4dp"
-            app:layout_constraintStart_toEndOf="@id/counter"
+            app:layout_constraintStart_toEndOf="@id/txtPosition"
             app:layout_constraintTop_toBottomOf="@id/guideCenterHor"
             tools:text="1234567890" />
 
         <TextView
+            android:id="@+id/txtDistanceLeader"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/txtDistanceLeader"
-            tools:text="1.413"
-            android:text="1.413"
-            android:maxLines="1"
-            android:ellipsize="end"
-            android:textSize="18sp"
             android:layout_marginBottom="4dp"
+            android:ellipsize="end"
+            android:gravity="center"
+            android:maxLines="1"
             android:textColor="@color/black"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toTopOf="@id/guideCenterHor"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/guideEndVer"
-            app:layout_constraintBottom_toTopOf="@id/guideCenterHor"/>
+            tools:text="1.413" />
 
         <TextView
             android:id="@+id/txtKmLeader"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
             android:layout_marginTop="4dp"
-            android:text="KM"
             android:textColor="@color/black"
             android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/guideEndVer"
             app:layout_constraintTop_toBottomOf="@id/guideCenterHor"
             tools:text="KM" />
 
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <View
+        android:id="@+id/lineAlltime"
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:layout_marginTop="20dp"
         android:background="@color/line_gray_prizes"
         android:visibility="visible"
-        android:id="@+id/lineAlltime"
-        android:layout_marginTop="20dp"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/containerLeaderPlace"/>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvAllTime"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:id="@+id/rvAllTime"
         android:padding="8dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/lineAlltime"
         tools:itemCount="3"
         tools:listitem="@layout/item_alltime_board"/>
