ajuste fluxo prize

--- a/tti2sdk/src/main/res/layout/item_list_prizes_midle_history.xml
+++ b/tti2sdk/src/main/res/layout/item_list_prizes_midle_history.xml
@@ -12,7 +12,7 @@
 
     <ImageView
         android:id="@+id/ivIconMiddle"
-        android:layout_width="wrap_content"
+        android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="10dp"
