--- a/tti2sdk/src/main/res/layout/item_list_prizes_top_history.xml
+++ b/tti2sdk/src/main/res/layout/item_list_prizes_top_history.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="20dp"
-    android:layout_marginTop="15dp"
+    android:layout_marginTop="8dp"
     android:layout_marginEnd="20dp"
     android:background="@drawable/background_gray_line_top_history" >
 
@@ -37,12 +37,12 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginTop="10dp"
-        android:background="@color/gray_text_list"
+        android:background="@color/border_prizes"
         app:layout_constraintTop_toBottomOf="@+id/tvHeader" />
 
     <ImageView
         android:id="@+id/ivIconTop"
-        android:layout_width="wrap_content"
+        android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="10dp"
