--- a/tti2sdk/src/main/res/layout/item_list_prizes_bottom_history.xml
+++ b/tti2sdk/src/main/res/layout/item_list_prizes_bottom_history.xml
@@ -8,12 +8,13 @@
     android:layout_height="wrap_content"
     android:layout_marginStart="20dp"
     android:layout_marginEnd="20dp"
+    android:layout_marginBottom="8dp"
     android:background="@drawable/background_gray_line_bottom_history" >
 
     <ImageView
         android:id="@+id/ivIconBottom"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="10dp"
         android:src="@drawable/ic_diamont"
