--- a/tti2sdk/src/main/res/layout/activity_prizes.xml
+++ b/tti2sdk/src/main/res/layout/activity_prizes.xml
@@ -68,6 +68,7 @@
             android:layout_width="wrap_content"
             android:layout_height="?android:attr/actionBarSize"
             android:layout_gravity="center"
+            android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:clickable="true"
@@ -76,6 +77,7 @@
             android:paddingHorizontal="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/txtProfileLabel"
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
