--- a/tti2sdk/src/main/res/layout/layout_tab_prizes_avaliable_unselected.xml
+++ b/tti2sdk/src/main/res/layout/layout_tab_prizes_avaliable_unselected.xml
@@ -21,7 +21,6 @@
         android:id="@+id/tvBadge"
         android:layout_width="wrap_content"
         android:layout_height="13dp"
-        android:text="5"
         android:textColor="@color/all_white"
         android:textSize="@dimen/ten_sp"
         android:fontFamily="@font/poppins_regular"
@@ -29,6 +28,7 @@
         android:layout_margin="5dp"
         android:paddingBottom="2dp"
         android:paddingStart="3.5dp"
-        android:paddingEnd="3.5dp" />
+        android:paddingEnd="3.5dp"
+        android:visibility="invisible" />
 
 </LinearLayout>
