--- a/tti2sdk/src/main/res/drawable/bck_item_list_prize_unselected.xml
+++ b/tti2sdk/src/main/res/drawable/bck_item_list_prize_unselected.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="@color/all_white"/>
+    <solid android:color="@color/mustard_box"/>
 
-    <stroke android:width="1dp" android:color="@color/all_white"/>
+    <stroke android:width="5dp" android:color="@color/mustard_box"/>
 
     <corners
-        android:topLeftRadius="20dp"
-        android:topRightRadius="20dp"
+        android:topLeftRadius="13dp"
+        android:topRightRadius="13dp"
         android:bottomLeftRadius="0dp"
-        android:bottomRightRadius="0dp" />
+        android:bottomRightRadius="13dp" />
 
     <padding
         android:left="0dp"
