--- a/tti2sdk/src/main/res/layout/activity_destination.xml
+++ b/tti2sdk/src/main/res/layout/activity_destination.xml
@@ -287,13 +287,13 @@
     <LinearLayout
         android:id="@+id/linearTotal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:background="@color/all_white"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:orientation="horizontal" />
+        app:layout_constraintTop_toBottomOf="@+id/containerToolbarDestinations" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/loadingBox"
@@ -302,11 +302,11 @@
         android:background="#34000000"
         android:clickable="false"
         android:elevation="10dp"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:visibility="visible">
+        app:layout_constraintTop_toBottomOf="@+id/containerToolbarDestinations">
 
         <include
             android:id="@+id/progressBar"
